modified logo image rotator (sponsor logos) views for widget and sample pages

--- a/app/views/2_column/sample.html.erb
+++ b/app/views/2_column/sample.html.erb
@@ -10,6 +10,8 @@
     - primary_content/collapsables_1
     - primary_content/collapsables_2
     - primary_content/collapsables_3
+    - primary_content/logo_image_rotator_1
+
   left_column:
     - left_column/callout_2
     - left_column/callout_3
