Updated CSS margins for sponsor logo rotator on right col and logo feed on 2/3 column modular

--- a/app/assets/stylesheets/widgets/sponsor-logo-rotator.scss
+++ b/app/assets/stylesheets/widgets/sponsor-logo-rotator.scss
@@ -38,11 +38,11 @@
       cursor: pointer;
     }
     .jcarousel-prev {
-      bottom: -20px;
+      //bottom: -20px;
       left: -15px;
     }
     .jcarousel-next {
-      bottom: -20px;
+      //bottom: -20px;
       right: -15px;
     }
     .jcarousel-prev-disabled, .jcarousel-next-disabled {
