--- a/app/assets/stylesheets/widgets/sponsorship-logo-feed.scss
+++ b/app/assets/stylesheets/widgets/sponsorship-logo-feed.scss
@@ -19,6 +19,7 @@
       width: 153px;
       padding: 1em 0;
       text-align: center;
+      margin:0 6px;
     }
     .jcarousel-prev, .jcarousel-next {
       position: absolute;
