add omni nav to sample pages
add omni css and js links in head.html;  update and rename omninav.html
to use new code with off-canvas nav; embed omninav.html into header.html

--- a/app/views/widgets/shared/_header.html
+++ b/app/views/widgets/shared/_header.html
@@ -1,4 +1,7 @@
 <header>
+
+<%= render 'widgets/shared/omninav' %>
+
     <div class="maxWidth">
         <nav class="mainNav"><a class="logo" href="../../index.aspx" itemscope="itemscope" itemtype="http://schema.org/Organization"><span itemprop="name">Chapman University</span></a>
             <div class="mainNavExpand"><a href="javascript:;">
@@ -65,7 +68,7 @@
                 </li>
                 <li><a href="../../arts/index.aspx"><span>Arts</span></a>
                 </li>
-                <li><a href="http://www.chapmanathletics.com/"><span>Athletics</span></a>
+                <li><a href="http://www.chapmanathletics.com/"><span>Athletics.</span></a>
                 </li>
                 <li><a href="../../research-and-institutions/index.aspx"><span>Research</span></a>
                 </li>
