--- a/app/views/widgets/shared/_omni-nav-old.html
+++ b/app/views/widgets/shared/_omni-nav-old.html
@@ -1,3 +1,4 @@
+<!-- old version before off-canvas nav added -->
 <div id="cu_nav">
 
     <ul id="cu_nav_domain" class="cu_nav_menu cu_nav_selectable">
