updated header and footer links and labels
removed Athletics, added Campus Life dropdown menu; fixed one link in
footer

--- a/app/views/widgets/shared/_footer.html
+++ b/app/views/widgets/shared/_footer.html
@@ -57,7 +57,7 @@
                             </li>
                             <li><a href="../../students/health-and-safety/disability-services/index.aspx">Disability Services</a>
                             </li>
-                            <li><a href="../../diversity/index.aspx">Diversity</a>
+                            <li><a href="../../students/health-and-safety/title-ix.aspx">Title IX</a>
                             </li>
                             <li><a href="../../campus-services/public-safety/emergency.aspx">Emergency Information</a>
                             </li>
