--- a/app/views/widgets/shared/_header.html
+++ b/app/views/widgets/shared/_header.html
@@ -68,7 +68,23 @@
                 </li>
                 <li><a href="../../arts/index.aspx"><span>Arts</span></a>
                 </li>
-                <li><a href="http://www.chapmanathletics.com/"><span>Athletics.</span></a>
+                
+                <li><a href="../../campus-life/index.aspx"><span>Campus Life</span></a>
+                    <div class="subNavLinks clearfix">
+                    <ul>
+                    <li><a class="icon icon-paw" href="http://www.chapmanathletics.com/landing/index">Athletics</a>
+                    </li>
+                    <li><a class="icon icon-hand" href="../../diversity/index.aspx">Diversity and Inclusion</a></li>
+                    <li><a class="icon icon-calendar4" href="https://events.chapman.edu/ ">Events</a></li>
+                    <li><a class="icon icon-earth" href="../../about/fish-interfaith-center/index.aspx">Fish Interfaith Center</a></li>
+                    <li><a class="icon icon-heart3" href="../../students/health-and-safety/index.aspx">Health and Safety</a></li>
+                    <li><a class="icon icon-home2" href="../../students/services/housing-and-residence/index.aspx">Residence Life</a></li>
+                    <li><a class="icon icon-smiley" href="../../students/life/index.aspx">Student Life</a></li>
+                    </ul>
+                    </div>
+                </li>
+                
+                
                 </li>
                 <li><a href="../../research-and-institutions/index.aspx"><span>Research</span></a>
                 </li>
