--- a/app/assets/stylesheets/base/mixins.scss
+++ b/app/assets/stylesheets/base/mixins.scss
@@ -81,13 +81,13 @@
 @mixin main_heading($weight: 800) {
 	margin-top: 16px;
 	font-family: "proxima-nova", "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
-	font-size: 40px;
+	font-size: 24px;
 	@if type-of($weight) == string {
 		font-weight: unquote($weight);
 	} @else {
 		font-weight: $weight;
 	}
-	line-height: 48px;
+	line-height: 24px;
 }
 
 @mixin sub_heading($weight: 800) {
@@ -136,12 +136,11 @@
 }
 
 @mixin content_label() {
+	margin-bottom: 0px;
 	font-family: "proxima-nova", "Helvetica Neue", "Microsoft Sans Serif", sans-serif;
-	font-size: 10px;
-	font-weight: 800;
-	color: #9B9B9B;
-	line-height: 12px;
-	text-transform: uppercase;
+	font-size: 20px;
+	font-weight: normal;
+	line-height: 20px;
 }
 
 //Paragraphs
@@ -209,6 +208,12 @@
 	cursor: pointer;
 	border: none;
 	@include box-shadow;
+
+	&:after {
+		content: '»';
+		padding-left: 4px;
+		font-size: 16px;
+	}
 
 	&:hover, &:focus {
 		outline: none;
