--- a/app/views/widgets/single_column/_cta_footer.html
+++ b/app/views/widgets/single_column/_cta_footer.html
@@ -1,10 +1,10 @@
 <div class="cta-footer-widget cta-footer-widget__medium-bg">
 	<div class="outer-container">
-		<div class="footer-section text">
-			<p>Next Steps</p>
+		<div class="text-section">
+			<p>Take the Next Step</p>
 		</div>
-		<div class="footer-section buttons">
-			<div class="buttons-container">
+		<div class="button-section">
+			<div class="button-container">
 				<div class="button-wrapper">
 					<a class="footer-button gray" href="../../admission/undergraduate/applynow.aspx">Visit our Campus</a>
 				</div>
