--- a/app/assets/stylesheets/widgets/hero/side_panel.scss
+++ b/app/assets/stylesheets/widgets/hero/side_panel.scss
@@ -13,6 +13,7 @@
   .cd-hero, .background-image, .background-video-wrapper {
     padding-bottom: $one-column-widget-spacing;
     pointer-events: none;
+    background-color: #eaeaea;
 
     @include media($medium-screen) {
       padding: 0;
@@ -35,9 +36,9 @@
       padding: $one-column-widget-spacing/2 0;
       max-width: 100%;
       margin-bottom: 0;
-      background-color: #E5E5E5;
+      background-color: #eaeaea;
       @include media($medium-screen) {
-        padding: $one-column-widget-spacing/2 $one-column-widget-spacing;
+        padding: $one-column-widget-spacing/2 $primary-column-widget-spacing*3;
       }
     }
   }
@@ -121,10 +122,10 @@
     padding: $one-column-widget-spacing/2 0 $one-column-widget-spacing;
 
     @include media($medium-screen) {
-      padding: $one-column-widget-spacing/2 $one-column-widget-spacing;
+      padding: $one-column-widget-spacing/2 $base-spacing*3;
     }
     @include media($large-screen) {
-      padding: $one-column-widget-spacing 0;
+      padding: $primary-column-widget-spacing 0;
       pointer-events: none;
       z-index: 666;
     }
@@ -132,9 +133,7 @@
 
   // The side panel
   .hero-content-panel {
-    box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
     padding: $one-column-widget-spacing;
-    background-color: white;
 
     @include media($large-screen) {
       @include span-columns(6);
@@ -143,10 +142,20 @@
     }
 
     // Title
-    h1 { margin-top: 0; }
+    h1 { 
+      margin-top: 0; 
+      text-align: center;
+    }
 
     // Subtitle
-    h2 { font-weight: 200; }
+    h2 { 
+      font-weight: 200;
+      text-align: center;
+    }
+
+    p {
+      text-align: center;
+    }
     
     .calls-to-action { 
       margin-top: $base-spacing;
