--- a/app/views/widgets/single_column/_contact_footer.html
+++ b/app/views/widgets/single_column/_contact_footer.html
@@ -1,28 +1,27 @@
 <div class="contact-footer-widget">
 	<div class="outer-container">
-		<div class="footer-section title">
-			<h2 class="footer-title">Contact Dodge College of Film and Media Arts</h2>
+		<div class="content-cell left">
+			<div class="content-wrap">
+				<address class="contact-line-1">
+					<h3 class="footer-heading address name">Front Office</h3>
+					<p class="address">Marion Knott Studios, Room 309, One University Drive., Orange, CA 92866</p>
+				</address>
+				<address class="contact-line-2">
+					<p class="address phone">(714)997-6711</p>
+					<a class="address email">dodgecollege@chapman.edu</a>
+				</address>
+			</div>
 		</div>
-		<div class="footer-section contact-1">
-			<address class="mailing">
-				<h3 class="footer-heading address name">Front Office</h3>
-				<p class="address">Marion Knott Studios, Room 309<br>One University Drive<br>Orange, CA 92866</p>
-			</address>
-		</div>
-		<div class="footer-section contact-2">
-			<address class="addl-contact">
-				<a class="address phone">(714)997-6711</a>
-				<a class="address email">dodgecollege@chapman.edu</a>
-			</address>
-		</div>
-		<div class="footer-section social-media">
-			<h3 class="footer-heading">Connect with Us</h3>
-			<ul class="social-icon-list">
-				<li><a class="social-link icon-instagram" href="http://www.instagram.com/chapmanu"></a></li>
-				<li><a class="social-link icon-facebook" href="http://www.facebook.com/ChapmanUniversity"></a></li>
-				<li><a class="social-link icon-twitter" href="http://twitter.com/#!/chapmanu"></a></li>
-				<li><a class="social-link icon-newspaper" href="http://twitter.com/#!/chapmanu"></a></li>
-			</ul>
+		<div class="content-cell right">
+			<div class="content-wrap">
+				<h3 class="footer-heading">Connect with Us</h3>
+				<ul class="social-icon-list">
+					<li><a class="social-link icon-instagram" href="http://www.instagram.com/chapmanu"></a></li>
+					<li><a class="social-link icon-facebook" href="http://www.facebook.com/ChapmanUniversity"></a></li>
+					<li><a class="social-link icon-twitter" href="http://twitter.com/#!/chapmanu"></a></li>
+					<li><a class="social-link icon-newspaper" href="http://twitter.com/#!/chapmanu"></a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </div>
