updates for hero slider & nav redesign - small screen size

--- a/app/assets/stylesheets/base/mixins.scss
+++ b/app/assets/stylesheets/base/mixins.scss
@@ -249,7 +249,10 @@
 
 @mixin theme-color-classes($primary) {
 	.theme-bg-color       { background-color: $primary; }
-	.theme-bg-color-alpha { background-color: rgba(red($primary), green($primary), blue($primary), 0.95); }
 	.theme-border-color   { border-color: $primary; }
 	.theme-button { @include button($primary); }
+
+	@include media($large-screen) {
+		.theme-bg-color-alpha { background-color: rgba(red($primary), green($primary), blue($primary), 0.95); }
+	}
 }
