--- a/app/views/widgets/hero/_side_panel.html
+++ b/app/views/widgets/hero/_side_panel.html
@@ -87,9 +87,9 @@
       <nav>
         <span class="cd-marker item-1"></span>
         <ul>
-          <li class="selected"><a href="#0">News Story 1</a></li>
-          <li><a href="#0">Event Announcement</a></li>
-          <li><a href="#0">Student or Alumni Showcase</a></li>
+          <li class="selected"><a href="#0">1</a></li>
+          <li><a href="#0">2</a></li>
+          <li><a href="#0">3</a></li>
         </ul>
       </nav> 
     </div>
