fix sample pages to more current version of widgets

--- a/app/views/2_column/law_theme.html.erb
+++ b/app/views/2_column/law_theme.html.erb
@@ -7,7 +7,9 @@
 
   primary_content:
     - primary_content/wysiwyg_editor_3
+    - primary_content/collapsables_1
     - primary_content/collapsables_2
+    - primary_content/collapsables_3
     - primary_content/personnel_region_2
     - primary_content/personnel_region_1
     - primary_content/tabs_1
