--- a/app/views/widgets/primary_content/_collapsables_2.html
+++ b/app/views/widgets/primary_content/_collapsables_2.html
@@ -10,7 +10,7 @@
                                         Application process and admission requirements
                 </h3>
         <div class="content editableContent" style="display: none;">
-            <p align="left" class="O7086">Chapman University’s MS.AT program will be using the Athletic Training Centralized Application System (ATCAS). Applications may be obtained from <a href="http://caate.net/apply-now/" target="_blank">ATCAS</a> at &nbsp;and will be available the year prior to your intended matriculation, beginning each year in July. The MS.AT program has two routes for admission, with each route requiring the prospective student to complete the required course prerequisites. &nbsp;For regular admission, please refer to the <a href="../graduate-programs/ms-athletic-training/index.aspx">Master of Science in Athletic Training page&nbsp;</a>.&nbsp; For accelerated admission (i.e. 3+2), please refer to the criteria below.</p>
+            <p align="left">Chapman University’s MS.AT program will be using the Athletic Training Centralized Application System (ATCAS). Applications may be obtained from <a href="http://caate.net/apply-now/" target="_blank">ATCAS</a> at &nbsp;and will be available the year prior to your intended matriculation, beginning each year in July. The MS.AT program has two routes for admission, with each route requiring the prospective student to complete the required course prerequisites. &nbsp;For regular admission, please refer to the <a href="../graduate-programs/ms-athletic-training/index.aspx">Master of Science in Athletic Training page&nbsp;</a>.&nbsp; For accelerated admission (i.e. 3+2), please refer to the criteria below.</p>
         </div>
     </div>
     <div class="accordion active">
