--- a/app/views/widgets/right_column/_callout_box_1.html
+++ b/app/views/widgets/right_column/_callout_box_1.html
@@ -1,8 +1,20 @@
-<div class="callout-box-widget callout styleOne">
-    <div class="border"> </div>
-    <h2>Calling out to all Alumnizzle! (Style 1 Callout Box)</h2>
-    <div class="editableContent">
-        <p><span>Lorem ipsum dolor sizzle da bomb, consectetuer adipiscing fo shizzle. Nullizzle nizzle velizzle, fizzle volutpizzle, for sure quis, go to hizzle vel, arcu. Pellentesque yippiyo tortizzle. Sed erizzle. Its fo rizzle izzle dolor dapibus turpizzle tempizzle mah nizzle. <a href="#">Maurizzle pellentesque nibh</a> et break yo neck, yall. Sure fo shizzle tortizzle. Away eleifend rhoncizzle nisi. In hizzle habitasse break yo neck, yall dictumst. Fo shizzle dapibizzle. tellus urna, pretizzle eu, mattizzle crunk, shizzlin dizzle vitae, nunc. That's the shizzle boofron. Integizzle fo shizzle shut the shizzle up sed hizzle</span>
-        </p>
-    </div>
+<div class="callout-box-widget callout photo styleOne">
+                    <img alt="Photo showing image dimensions for webpage element." src="//www.chapman.edu/campus-services/marketing-communication/_files/website/images/image-sizes/206.jpg" width="195"/>
+                    <h2>Right Column Callout (style 1)</h2>
+                    <div class="editableContent"><p><span>Lorem ipsum dolor sit amet, <a href="//www.chapman.edu/admission/undergraduate/index.aspx">consectetur adipiscing</a> elit. Donec leo turpis, dictum a quam eget.</span></p>
+	<p><a href="//www.chapman.edu/admission/undergraduate/index.aspx"><span>Link Here</span></a></p></div>
+</div>
+
+<div class="callout-box-widget callout noPhoto styleOne">
+    <div class="border"></div>
+                 <h2>Right Column Callout No Photo (Style 1)</h2>
+                <div class="editableContent"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec leo turpis, dictum a quam eget.</p>
+	<p><a href="//www.chapman.edu/admission/undergraduate/index.aspx">Link Here</a></p></div>
+</div>
+
+<div class="callout-box-widget callout noPhoto styleOne">
+    <div class="border"></div>
+                 
+                <div class="editableContent"><p>No heading on this one (Style 1), <a href="//www.chapman.edu/admission/undergraduate/index.aspx">consectetur adipiscing</a> elit.</p>
+	<p><a href="//www.chapman.edu/admission/undergraduate/index.aspx">Link Here</a></p></div>
 </div>
