--- a/app/views/widgets/primary_content/_collapsables_3.html
+++ b/app/views/widgets/primary_content/_collapsables_3.html
@@ -1,6 +1,6 @@
 <div class="collapsibles-widget">
 
-                <div class="editableContent summaryText">This one does NOT have the optional Header so the collapsibles will be H2 (if header is present then it's H2 and the collapsible headers are h3</div>                
+                <div class="editableContent summaryText">This one does NOT have the optional Header so the collapsibles will be H2 (if header is present then it's H2 and the collapsible headers are h3</div>                 
                 
     <div class="accordion">
         <h2 class="header">
@@ -9,7 +9,7 @@
                                         Application process and admission requirements
                 </h2>
         <div class="content editableContent" style="display: none;">
-            <p align="left" class="O7086">Chapman University’s MS.AT program will be using the Athletic Training Centralized Application System (ATCAS). Applications may be obtained from <a href="http://caate.net/apply-now/" target="_blank">ATCAS</a> at &nbsp;and will be available the year prior to your intended matriculation, beginning each year in July. The MS.AT program has two routes for admission, with each route requiring the prospective student to complete the required course prerequisites. &nbsp;For regular admission, please refer to the <a href="../graduate-programs/ms-athletic-training/index.aspx">Master of Science in Athletic Training page&nbsp;</a>.&nbsp; For accelerated admission (i.e. 3+2), please refer to the criteria below.</p>
+            <p align="left">Chapman University’s MS.AT program will be using the Athletic Training Centralized Application System (ATCAS). Applications may be obtained from <a href="http://caate.net/apply-now/" target="_blank">ATCAS</a> at &nbsp;and will be available the year prior to your intended matriculation, beginning each year in July. The MS.AT program has two routes for admission, with each route requiring the prospective student to complete the required course prerequisites. &nbsp;For regular admission, please refer to the <a href="../graduate-programs/ms-athletic-training/index.aspx">Master of Science in Athletic Training page&nbsp;</a>.&nbsp; For accelerated admission (i.e. 3+2), please refer to the criteria below.</p>
         </div>
     </div>
     <div class="accordion active">
