--- a/app/views/widgets/right_column/_callout_box_2.html
+++ b/app/views/widgets/right_column/_callout_box_2.html
@@ -1,6 +1,20 @@
-<div class="callout-box-widget callout styleTwo">
-    <div class="border"> </div>
-    <h2>Style 2 Callout Box</h2>
-    <div class="editableContent"><span>Bizzle nizzle turpis izzle pimpin' bibendizzle owned. Izzle vestibulizzle tortor break yo neck, yall massa. Quisque malesuada ornare magna. Morbi commodo, nisl nizzle bibendizzle egestizzle, yippiyo dolor things ligula, boofron auctor boom shackalack dolizzle mammasay mammasa mamma oo sa augue. Pot id da bomb sizzle amizzle erizzle adipiscing sagittizzle. That's the shizzle owned nizzle izzle lacus. In da bomb nonummy leo. Lorem fo shizzle dolor sit the bizzle, cool adipiscing elit. <a href="#">Phasellizzle fo shizzle</a> ligula, posuere for sure amet, facilisizzle sizzle, tristique ass, libero. Curabitur sempizzle its fo rizzle stuff. Ut nizzle leo. Nunc check it out bizzle break it down dizzle bow wow wow tellivizzle. We gonna chung condimentum metizzle break it down go to hizzle. Aenean fo shizzle, nisi quis get down get down lacinia, lectizzle da bomb commodo felizzle, nizzle stuff erizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle stuff get down get down. Brizzle leo check out this, the bizzle sizzle shizzlin dizzle, ornare check it out, pulvinar get down get down, felis.</span>
-    </div>
+<div class="callout-box-widget callout photo styleTwo">
+                    <img alt="Photo showing image dimensions for webpage element." src="//www.chapman.edu/campus-services/marketing-communication/_files/website/images/image-sizes/206.jpg" width="195"/>
+                    <h2>Right Column Callout (style 2)</h2>
+                    <div class="editableContent"><p><span>Lorem ipsum dolor sit amet, <a href="//www.chapman.edu/admission/undergraduate/index.aspx">consectetur adipiscing</a> elit. Donec leo turpis, dictum a quam eget.</span></p>
+	<p><a href="//www.chapman.edu/admission/undergraduate/index.aspx"><span>Link Here</span></a></p></div>
+</div>
+
+<div class="callout-box-widget callout noPhoto styleTwo">
+    <div class="border"></div>
+                 <h2>Right Column Callout No Photo (Style 2)</h2>
+                <div class="editableContent"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec leo turpis, dictum a quam eget.</p>
+	<p><a href="//www.chapman.edu/admission/undergraduate/index.aspx">Link Here</a></p></div>
+</div>
+
+<div class="callout-box-widget callout noPhoto styleTwo">
+    <div class="border"></div>
+                 
+                <div class="editableContent"><p>No heading on this one (Style 2), <a href="//www.chapman.edu/admission/undergraduate/index.aspx">consectetur adipiscing</a> elit.</p>
+	<p><a href="//www.chapman.edu/admission/undergraduate/index.aspx">Link Here</a></p></div>
 </div>
