Update right col bg, collapsible header font weight, funnel margins

--- a/app/assets/stylesheets/layout_old/right-column.scss
+++ b/app/assets/stylesheets/layout_old/right-column.scss
@@ -38,7 +38,7 @@
     }
   }
   .styleTwo {
-    background-color: #8a8a8a;
+    background-color: #a0a0a0;
     border: 1px solid #c1c1c1;
     color: $white;
     position: relative;
