--- a/app/views/2_column/sample.html.erb
+++ b/app/views/2_column/sample.html.erb
@@ -7,6 +7,7 @@
   
 
   primary_content:
+    - primary_content/funnel_boxes_1
     - primary_content/collapsables_1
     - primary_content/collapsables_2
     - primary_content/collapsables_3
