--- a/app/views/widgets/primary_content/_funnel_boxes_1.html
+++ b/app/views/widgets/primary_content/_funnel_boxes_1.html
@@ -1,52 +1,61 @@
 <div class="funnel-boxes-widget funnel">
-    <div class="funnelBlock">
-        <div class="featureImage">
-            <a href="http://smile-per-day.com/2015/01/unrealistic-funny-squirrels-20-photos/">
-                <img src="http://www.skiheavenly.com/~/media/heavenly/images/732x260%20header%20images/events-heavenly-header.ashx" alt="[alt text]" height="125px" src="imgres-1.jpg" width="290px" />
-            </a>
-        </div>
-        <h3><a href="http://smile-per-day.com/2015/01/unrealistic-funny-squirrels-20-photos/">Join the Momement »</a></h3>
-        <div class="copy">Lebowski ipsum yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Dolor sit amet, consectetur adipiscing elit praesent ac magna justo pellentesque ac. Another Caucasian, Gary. Lectus quis elit blandit fringilla a ut turpis praesent felis. Jeez. I miss vinyl. Ligula, malesuada suscipit malesuada non, ultrices non urna sed orci ipsum, placerat id. We wanted to talk about little Larry. May we come in? Condimentum rutrum, rhoncus ac lorem aliquam placerat.</div>
-        <ul class="linkList">
-            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... buying people drinks... »</a></li>
-            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... drinking people drinks... »</a></li>
-            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... drunk people drinking... »</a></li>
-            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... drinking people drunk... »</a></li>
-            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... drinking peoples drinks... »</a></li>
-        </ul>
-    </div>
-
-    <div class="funnelBlock">
-        <div class="featureImage">
-            <a href="http://smile-per-day.com/2015/01/unrealistic-funny-squirrels-20-photos/">
-                <img src="http://kaeleventservices.com/wp-content/uploads/2012/01/event_21.png" alt="[alt text]" height="125px" src="imgres-1.jpg" width="290px" />
-            </a>
-        </div>
-        <h3><a href="http://smile-per-day.com/2015/01/unrealistic-funny-squirrels-20-photos/">Amazing Venues »</a></h3>
-        <div class="copy">Lebowski ipsum yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Dolor sit amet, consectetur adipiscing elit praesent ac magna justo pellentesque ac. Another Caucasian, Gary. Lectus quis elit blandit fringilla a ut turpis praesent felis. Jeez. I miss vinyl. Ligula, malesuada suscipit malesuada non, ultrices non urna sed orci ipsum, placerat id. We wanted to talk about little Larry. May we come in? Condimentum rutrum, rhoncus ac lorem aliquam placerat.</div>
-        <ul class="linkList">
-            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... buying people drinks... »</a></li>
-            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... drinking people drinks... »</a></li>
-            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... drunk people drinking... »</a></li>
-            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... drinking people drunk... »</a></li>
-            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... drinking peoples drinks... »</a></li>
-        </ul>
-    </div>
-
-    <div class="funnelBlock">
-        <div class="featureImage">
-            <a href="http://smile-per-day.com/2015/01/unrealistic-funny-squirrels-20-photos/">
-                <img src="http://digitalsojourner.com/wp-content/uploads/2012/10/Upcoming-Events-2.jpg" alt="[alt text]" height="125px" src="imgres-1.jpg" width="290px" />
-            </a>
-        </div>
-        <h3><a href="http://smile-per-day.com/2015/01/unrealistic-funny-squirrels-20-photos/">List of Upcoming Events »</a></h3>
-        <div class="copy">Lebowski ipsum yes, so we were informed. However, we must of course transmit the remains to you in a receptacle. Dolor sit amet, consectetur adipiscing elit praesent ac magna justo pellentesque ac. Another Caucasian, Gary. Lectus quis elit blandit fringilla a ut turpis praesent felis. Jeez. I miss vinyl. Ligula, malesuada suscipit malesuada non, ultrices non urna sed orci ipsum, placerat id. We wanted to talk about little Larry. May we come in? Condimentum rutrum, rhoncus ac lorem aliquam placerat.</div>
-        <ul class="linkList">
-            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... buying people drinks... »</a></li>
-            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... drinking people drinks... »</a></li>
-            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... drunk people drinking... »</a></li>
-            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... drinking people drunk... »</a></li>
-            <li><a href="http://funnystack.com/wp-content/uploads/2014/04/Funny-Squirrel-68.jpg">Silly Squirrel... drinking peoples drinks... »</a></li>
-        </ul>
-    </div>
-</div>
+                                                                                                        <div class="funnelBlock">
+                <div class="featureImage">
+                                            <img alt="sample image 1 of 2 for funnels widget" height="125px" src="http://kaeleventservices.com/wp-content/uploads/2012/01/event_21.png" width="290px"/>
+                                    </div>
+                <h3>
+                                            Funnel One Title
+                                    </h3>
+                                    <div class="copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec leo turpis, dictum a quam eget, pellentesque feugiat diam. </div>
+                                                    <ul class="linkList">
+                                                                                                                        <li>
+                            <a href="2-3-column-modular-resources.aspx">Link One »</a>
+                            </li>
+                                                                </ul>
+                            </div>
+                                                                                                                    <div class="funnelBlock">
+                <div class="featureImage">
+                                            <img alt="sample image 2 of 2 for funnels widget" height="125px" src="http://kaeleventservices.com/wp-content/uploads/2012/01/event_21.png" width="290px"/>
+                                    </div>
+                <h3>
+                                            Funnel Two Title
+                                    </h3>
+                                    <div class="copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec leo turpis, dictum a quam eget, pellentesque feugiat diam. </div>
+                                                    <ul class="linkList">
+                                                                                                                        <li>
+                            <a href="2-3-column-modular-resources.aspx">Link Two »</a>
+                            </li>
+                                                                                                                                                <li>
+                            <a href="http://blogs.chapman.edu">Blogs »</a>
+                            </li>
+                                                                                                                                                <li>
+                            <a href="//www.chapman.edu/admission/_files/admission-portal-checklist-items.pdf">Admission Portal Checklist (pdf) »</a>
+                            </li>
+                                                                                                                                                <li>
+                            <a href="http://blogs.chapman.edu/happenings">4th Link Here »</a>
+                            </li>
+                                                                </ul>
+                            </div>
+                                                                                                                    <div class="funnelBlock">
+                <div class="featureImage">
+                                            <img alt="sample image 3" height="125px" src="//www.chapman.edu/campus-services/marketing-communication/_files/website/images/image-sizes/funnel-sample.jpg" width="290px"/>
+                                    </div>
+                <h3>
+                                            Required Headline
+                                    </h3>
+                                                    <ul class="linkList">
+                                                                                                                                    </ul>
+                            </div>
+                                                                                                                    <div class="funnelBlock">
+                <div class="featureImage">
+                                            <a href="//www.chapman.edu/academics/learning-at-chapman/index.aspx">
+                            <img alt="sample image 4" height="125px" src="//www.chapman.edu/campus-services/marketing-communication/_files/website/images/image-sizes/funnel-sample.jpg" width="290px"/>
+                        </a>
+                                    </div>
+                <h3>
+                                            <a href="//www.chapman.edu/academics/learning-at-chapman/index.aspx">Required Headline with Link »</a>
+                                    </h3>
+                                                    <ul class="linkList">
+                                                                                                                                    </ul>
+                            </div>
+                                </div>
