--- a/app/assets/stylesheets/themes/ces.scss
+++ b/app/assets/stylesheets/themes/ces.scss
@@ -4,13 +4,13 @@
   
   .smallMasthead .masthead, .smallMasthead .masthead-old, .bigMasthead .mastheadPlaceholder, .bigMasthead .masthead, .bigMasthead .masthead-old, .nameBar, .rightColumn .styleTwo {
   	background: $ces-primary; /* Old browsers */
-  	background: -moz-radial-gradient(center, ellipse cover, $ces-primary 1%, $ces-secondary 93%); /* FF3.6+ */
-  	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(1%,$ces-primary), color-stop(93%,$ces-secondary)); /* Chrome,Safari4+ */
-  	background: -webkit-radial-gradient(center, ellipse cover, $ces-primary 1%,$ces-secondary 93%); /* Chrome10+,Safari5.1+ */
-  	background: -o-radial-gradient(center, ellipse cover, $ces-primary 1%,$ces-secondary 93%); /* Opera 12+ */
-  	background: -ms-radial-gradient(center, ellipse cover, $ces-primary 1%,$ces-secondary 93%); /* IE10+ */
-  	background: radial-gradient(center, ellipse cover, $ces-primary 1%,$ces-secondary 93%); /* W3C */
-  	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$ces-primary}', endColorstr='#{$ces-secondary}',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  	//background: -moz-radial-gradient(center, ellipse cover, $ces-primary 1%, $ces-secondary 93%); /* FF3.6+ */
+  	//background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(1%,$ces-primary), color-stop(93%,$ces-secondary)); /* Chrome,Safari4+ */
+  	//background: -webkit-radial-gradient(center, ellipse cover, $ces-primary 1%,$ces-secondary 93%); /* Chrome10+,Safari5.1+ */
+  	//background: -o-radial-gradient(center, ellipse cover, $ces-primary 1%,$ces-secondary 93%); /* Opera 12+ */
+  	//background: -ms-radial-gradient(center, ellipse cover, $ces-primary 1%,$ces-secondary 93%); /* IE10+ */
+  	//background: radial-gradient(center, ellipse cover, $ces-primary 1%,$ces-secondary 93%); /* W3C */
+  	//filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$ces-primary}', endColorstr='#{$ces-secondary}',GradientType=1 ); /* IE6-9 fallback on horizontal gradient //*/
   }
 
   .rightColumn .styleTwo .border {
@@ -43,21 +43,11 @@
   .newbutton a {
     border: 1px solid $ces-primary;
     background-color: $ces-primary;
-    background-image: -webkit-gradient(linear, left top, left bottom, from($ces-primary), to($ces-secondary));
-    background-image: -webkit-linear-gradient(top, $ces-primary, $ces-secondary);
-    background-image: -moz-linear-gradient(top, $ces-primary, $ces-secondary);
-    background-image: -o-linear-gradient(top, $ces-primary, $ces-secondary);
-    background-image: linear-gradient(to bottom, $ces-primary, $ces-secondary);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$ces-primary}', endColorstr='#{$ces-secondary}',GradientType=1 );
+    
     &:hover {
       border: 1px solid $ces-primary;
       background-color: $ces-primary;
-      background-image: -webkit-gradient(linear, left top, left bottom, from($ces-primary), to($ces-secondary));
-      background-image: -webkit-linear-gradient(top, $ces-primary, $ces-secondary);
-      background-image: -moz-linear-gradient(top, $ces-primary, $ces-secondary);
-      background-image: -o-linear-gradient(top, $ces-primary, $ces-secondary);
-      background-image: linear-gradient(to bottom, $ces-primary, $ces-secondary);
-      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$ces-primary}', endColorstr='#{$ces-secondary}',GradientType=1 );
+    
     }
   }
 
