changes to funnel1up and personnel sample pages

--- a/app/views/2_column/sample.html.erb
+++ b/app/views/2_column/sample.html.erb
@@ -9,6 +9,8 @@
   primary_content:
     - primary_content/funnel_1up_boxes_1
     - primary_content/funnel_2up_boxes_1
+    - primary_content/personnel_region_1
+    - primary_content/personnel_region_2
     - primary_content/collapsables_1
     - primary_content/collapsables_2
     - primary_content/collapsables_3
