add funnel 1up to sample pages

--- a/app/views/widgets/primary_content/_funnel_1up_boxes_1.html
+++ b/app/views/widgets/primary_content/_funnel_1up_boxes_1.html
@@ -4,19 +4,17 @@
             <div class="content">
             <p>
                 <img alt="sample image 1 of 2 for funnel widget" class="featureImage" height="150" src="//www.chapman.edu/students/_files/slide-small/new-slide-region.jpg" width="200"/>
-                <div id="lipsum">
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec leo turpis, dictum a quam eget, pellentesque feugiat diam. Quisque non lobortis mi. Aliquam tempor fermentum volutpat. Duis nisl urna, molestie vel arcu vitae, pulvinar hendrerit felis. Quisque at tellus egestas, suscipit metus vel, semper ex. Donec commodo sem non ultrices hendrerit. Nunc at gravida odio. Praesent elementum porta felis, eu fringilla odio placerat sit amet.&#160;</p>
-</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec leo turpis, dictum a quam eget, pellentesque feugiat diam. Quisque non lobortis mi. Aliquam tempor fermentum volutpat. Duis nisl urna, molestie vel arcu vitae, pulvinar hendrerit felis. Quisque at tellus egestas, suscipit metus vel, semper ex. Donec commodo sem non ultrices hendrerit. Nunc at gravida odio. Praesent elementum porta felis, eu fringilla odio placerat sit ame.</p>
             </p>
                             <ul class="linkList">
                                                                                                     <li>
-                        <a href="http://www.chapman.edu/admission/index.aspx">Internal Link »</a>
+                        <a href="http://www.chapman.edu/academics/learning-at-chapman/index.aspx">Internal Link »</a>
                         </li>
                                                                                                                         <li>
-                        <a href="http://blogs.chapman.edu">External Link »</a>
+                        <a href="http://www.chapman.edu">External Link »</a>
                         </li>
                                                                                                                         <li>
-                        <a href="http://blogs.chapman.edu>File Link »</a>
+                        <a href="//www.chapman.edu/campus-services/marketing-communication/_files/campus-aerial-view.jpg">File Link »</a>
                         </li>
                                                     </ul>
             </div>
@@ -32,12 +30,8 @@
                                                                                                     <li>
                         <a href="http://blogs.chapman.edu">Blogs at Chapman »</a>
                         </li>
-                                                                                                                         <li>
-                         
-                         </li>
-                                                                                                                         <li>
-                         
-                         </li>
                                                     </ul>
             </div>
                     </div>
+            </div>
+            
