--- a/app/views/2_column/sample.html.erb
+++ b/app/views/2_column/sample.html.erb
@@ -7,6 +7,7 @@
   
 
   primary_content:
+    - primary_content/funnel_1up_boxes_1
     - primary_content/funnel_2up_boxes_1
     - primary_content/personnel_region_1
     - primary_content/personnel_region_2
