--- a/app/views/3_column/sample.html.erb
+++ b/app/views/3_column/sample.html.erb
@@ -3,6 +3,8 @@
 
 <%= widgets <<-YAML
   primary_content:
+    - primary_content/funnel_1up_boxes_1
+    - primary_content/funnel_2up_boxes_1
     - primary_content/collapsables_1
     - primary_content/collapsables_2
     - primary_content/collapsables_2
