--- a/app/views/3_column/law_theme.html.erb
+++ b/app/views/3_column/law_theme.html.erb
@@ -1,14 +1,10 @@
-<%= title "Two Column Modular Sample Page" %>
+<%= title "3 Column LAW SCHOOL Sample" %>
 <%= theme "law" %>
 
 <%= widgets <<-YAML
-
-  masthead: masthead/boxes_1
-
   primary_content:
     - primary_content/wysiwyg_editor_3
     - primary_content/three_photo_callout_1
-
 
   left_column:
     - left_column/callout_1
@@ -16,6 +12,12 @@
     - left_column/callout_3
     - left_column/calls_to_action_1
     - left_column/calls_to_action_2
+
+  right_column:
+    - right_column/action_buttons
+    - right_column/callout_box_1
+    - right_column/callout_box_2
+
 
   YAML
 %>
